Update design, validation and fix bugs
* Update validation script.
* Remove warning icons.
* Fix layout bugs.

--- a/src/scss/layout/_body.scss
+++ b/src/scss/layout/_body.scss
@@ -1,11 +1,10 @@
 .body {
   margin: 0 auto;
-  padding: 16px;
   background: linear-gradient(to bottom, $color-bg 0, $color-bg 130px, transparent 0);
   background-repeat: no-repeat;
 
   @media (min-width: $medium-screen) {
-    padding: 60px;
+    margin: 60px auto;
   }
 
   &.is-fixed-by-modal {
